Fix footer overflow

--- a/components/footer/style.scss
+++ b/components/footer/style.scss
@@ -4,6 +4,7 @@
   color: $white;
 
   ul {
+    margin: 0;
     background-image: url('/images/footer-background.png');
     background-position: center;
     background-size: cover;
